--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 anyhow = "1.0.66"
+fuzzy-matcher = "0.3.7"
 im = { version = "15.1.0", features = ["serde"] }
 poise = "0.5.0"
 serde = "1.0.149"
