--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.66"
 chrono = "0.4.23"
 chrono-english = "0.1.7"
 chrono-tz = "0.8.1"
+derive_more = "0.99.17"
 fuzzy-matcher = "0.3.7"
 im = { version = "15.1.0", features = ["serde"] }
 poise = "0.5.0"
